--- a/assests/updateDetails.css
+++ b/assests/updateDetails.css
@@ -210,12 +210,16 @@ form .submitBtn input[type="submit"] {
   left: 45%;
 }
 
-footer{
+footer {
   background: rgb(217, 217, 217);
   color: rgb(90, 90, 90);
   text-align: center;
   padding: 10px;
+  position: relative;
+  z-index: 10;
+  width: 100%;
 }
+
 
 @media screen and (max-width: 768px) {
   .navbar_menu {
